<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_containers"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/containers_menu_item" />
        <item
            android:id="@+id/nav_images"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/images_menu_item" />
        <item
            android:id="@+id/nav_volumes"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/volumes_menu_item" />
        <item
            android:id="@+id/nav_networks"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/networks_menu_item" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/settings_menu_item" />
    </group>
</menu>